# CheerUpYourColleagues

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/application/: main.py
app/application/airflow/dags/: msi_dag.py  send_msg_1_dag.py  send_msg_2_dag.py  send_msg_2_taskflow_dag.py
app/infra/message_senders/: base.py  teams_webhook.py
app/infra/repositories/picture/: base.py  lorem_picsum.py  minio.py  s3.py  toad_memes.json  wednesday.py
app/infra/repositories/quote/: base.py  quotable_io.py
app/infra/repositories/statistics/: base.py  converters.py  rdb.py  rdb_tables.py
app/infra/sources/picture/: base.py  lorem_picsum.py  wednesday.py
app/infra/sources/quote/: base.py  quotable_io.py
app/logger/: base.py
app/logic/: image_processing.py  init.py  save_content.py  send_random_message.py  send_wednesday_meme.py
app/settings/: config.py
docker-compose/: airflow.yaml  app.yaml  minio.yaml
