[tool.poetry]
name = "cheerupyourcolleagues"
version = "0.1.0"
description = "Simple script to support colleagues."
authors = ["Dmitry Patrushev <impda@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.115"
aiojobs = "^1.2.1"
apscheduler = "^3.10.4"


[tool.poetry.group.dev.dependencies]
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
