[tool.poetry]
name = "cheerupyourcolleagues"
version = "0.1.0"
description = "Simple script to support colleagues."
authors = ["Dmitry Patrushev <impda@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
punq = "^0.7.0"
pydantic-settings = "^2.2.1"
minio = "^7.2.7"
sqlalchemy = "^2.0.30"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev.dependencies]
pillow = "^10.3.0"


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"
isort = "^5.13.2"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-third-party = [""]
